# eie_nrf52840

./: .bashrc  .gitignore  CMakeLists.txt  README.md  eie_nrf52840.git.code-workspace  west.yml
app/: CMakeLists.txt  prj.conf  sample.yaml  smp_force.conf
app/boards/: nrf52840dk_nrf52840.overlay
app/modules/: btn.c  includes.h
app/modules/BTN/: BTN.h
app/modules/DBG/: DBG.h
app/modules/LED/: LED.h  led.c
app/modules/btn/: BTN.h  btn.c
app/src/: btn.c  btn.h  defines.h  includes.h  init.c  init.h  led.c  led.h  main.c  state_machine.c  state_machine.h  threads.c  threads.h
doc/10_Serial_Protocols/: serial_protocols.adoc
doc/11_Zephyr_Modules/: zephyr_modules.adoc
doc/11_Zephyr_Modules/imgs/: widget_tree.puml
doc/1_Getting_Started/: README.MD
doc/2_Version_Control/: README.MD  git_cheatsheet.txt
doc/3_Embedded_Primer/: embedded_primer.adoc
doc/4_Debug_and_Buttons/: README.md
doc/5_State_Machines/: state_machines.adoc
doc/5_State_Machines/imgs/: exercise_sm.puml  led_sm.puml  traffic_light_sm.puml
doc/6_Pulse_Width_Modulation/: README.md
doc/7_BLE_Intro/: README.md
doc/8_BLE_Peripheral/: README.md
doc/9_BLE_Central/: README.md
drivers/: CMakeLists.txt
drivers/BTN/: BTN.h  CMakeLists.txt  btn.c
drivers/LCD/: CMakeLists.txt  lv_data_obj.c  lv_data_obj.h
drivers/LED/: CMakeLists.txt  LED.h  led.c
zephyr/: module.yml
